--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="DemoApp">
+<html lang="en" ng-app="app">
     <head>
         <base href="/" >
         <meta charset="utf-8">
@@ -16,6 +16,11 @@
 
         <!-- include custom AngularJS files -->
         <script src="js/app.js"></script>
+        <script src="js/controllers/menu-controller.js"></script>
+        <script src="js/controllers/blog-list.js"></script>
+        <script src="js/controllers/blog-post.js"></script>
+        <script src="js/controllers/get-page.js"></script>
+        <script src="js/controllers/category-list.js"></script>
 
         <!-- Google Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
