--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app">
+<html lang="en">
     <head>
         <base href="/" >
         <meta charset="utf-8">
@@ -8,11 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         
         <!-- include AngularJS plus modules -->
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
-        <script src="https://code.angularjs.org/1.2.22/angular-route.min.js"></script>
-        <script src="https://code.angularjs.org/1.2.22/angular-animate.min.js"></script>
-        <script src="https://code.angularjs.org/1.2.22/angular-resource.min.js"></script>
-        <script src="https://code.angularjs.org/1.2.22/angular-sanitize.min.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="https://code.angularjs.org/1.4.9/angular-route.min.js"></script>
+        <script src="bower_components/angular-animate/angular-animate.min.js"></script>
+        <script src="https://code.angularjs.org/1.4.9/angular-sanitize.min.js"></script>
 
         <!-- include custom AngularJS files -->
         <script src="js/app.js"></script>
@@ -32,7 +31,7 @@
         <link rel="stylesheet" href="css/style.css" />
 
     </head>
-    <body>
+    <body ng-app="app">
 
         <header>
 
